--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,28 @@
     android:background="#5703b0"
     tools:context=".MainActivity">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="내 손 안의 작은 가계부"
+        android:textColor="@color/white"
+        android:fontFamily="@font/gmarketsans"
+        android:textAlignment="center"
+        android:layout_marginTop="100dp" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="BORA BOOK"
+        android:textSize="40sp"
+        android:textColor="@color/white"
+        android:fontFamily="@font/gmarketsans"
+        android:textAlignment="center"
+        android:layout_marginTop="10dp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="100dp"
+        android:paddingTop="20dp"
         android:orientation="vertical">
 
     <EditText
@@ -20,25 +38,50 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/white"
-        android:layout_margin="10dp"
+        android:layout_margin="20dp"
         android:padding="10dp"
-        android:hint="아이디를 입력하세용가리 🐉🐉"
+        android:hint="아이디를 입력하세용가리🐉🐉"
         android:text="" />
 
     <EditText
         android:id="@+id/et2"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_margin="10dp"
+        android:layout_marginHorizontal="20dp"
         android:padding="10dp"
         android:background="@color/white"
         android:hint="비밀번호를 입력하세요"
         android:inputType="textPassword"
         android:text="" />
 
-    <Button
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/checkbox"
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="130dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/gmarketsans"
+                android:text="자동 로그인"
+                android:textColor="@color/white"
+                android:textSize="15sp" />
+
+
+        </LinearLayout>
+
+        <Button
         android:id="@+id/loginBtn"
-        android:layout_width="match_parent"
+        android:layout_width="150dp"
+        android:background="@drawable/select_button"
+        android:layout_gravity="center"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:text="로그인" />
