[update] 로그인 성공 시 LoginID, nick 가져오기 성공
-> 로그인 아이디랑 비밀번호 Preference 하기
-> 가계부 페이지로 전환 안 됨

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,7 +61,7 @@
             android:orientation="horizontal">
 
             <CheckBox
-                android:id="@+id/checkbox"
+                android:id="@+id/autoLogin"
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="130dp" />
