[update] 달력의 날짜 클릭 시 해당 연월일/아이디 정보 넘기기2

--- a/app/src/main/res/layout/detail_list.xml
+++ b/app/src/main/res/layout/detail_list.xml
@@ -2,10 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:visibility="visible">
+    android:orientation="vertical">
 
-        <LinearLayout
+    <Button
+        android:gravity="right"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="X"
+        android:textSize="20sp"
+        android:fontFamily="@font/gmarketsans"
+        android:background=""
+        android:textColor="#5107b0" />
+
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
