--- a/app/src/main/res/layout/fragment2.xml
+++ b/app/src/main/res/layout/fragment2.xml
@@ -8,19 +8,18 @@
 
     <TextView
         android:gravity="center"
-        android:layout_marginBottom="20dp"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="50dp"
         android:fontFamily="@font/gmarketsans"
         android:text="BORA 가계부 쓰기"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:background="#5107b0"
-        android:textSize="30sp" />
+        android:textSize="25sp" />
     <RadioGroup
         android:id="@+id/radioGroup"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="60dp"
         android:orientation="horizontal"
         android:fontFamily="@font/gmarketsans"
         android:gravity="center"
@@ -29,10 +28,10 @@
         <RadioButton
             android:id="@+id/radio1"
             android:button="@null"
-            android:layout_margin="10dp"
+            android:layout_marginHorizontal="10dp"
             android:background="@drawable/selector_radio_button"
             android:textColor="@drawable/selector_radio_text"
-            android:layout_width="100dp"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:fontFamily="@font/gmarketsans"
@@ -42,10 +41,10 @@
         <RadioButton
             android:id="@+id/radio2"
             android:button="@null"
-            android:layout_margin="10dp"
+            android:layout_marginHorizontal="10dp"
             android:background="@drawable/selector_radio_button"
             android:textColor="@drawable/selector_radio_text"
-            android:layout_width="100dp"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:fontFamily="@font/gmarketsans"
@@ -55,10 +54,10 @@
         <RadioButton
             android:id="@+id/radio3"
             android:button="@null"
-            android:layout_margin="10dp"
+            android:layout_marginHorizontal="10dp"
             android:background="@drawable/selector_radio_button"
             android:textColor="@drawable/selector_radio_text"
-            android:layout_width="100dp"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:fontFamily="@font/gmarketsans"
@@ -73,12 +72,12 @@
         android:fontFamily="@font/gmarketsans"
         android:textAlignment="center"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:contextClickable="true" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:orientation="horizontal"
         android:gravity="center">
         <Spinner
@@ -87,7 +86,7 @@
             android:layout_width="130dp"
             android:fontFamily="@font/gmarketsans"
             android:gravity="fill_horizontal"
-            android:layout_height="60dp"
+            android:layout_height="50dp"
             android:contextClickable="true"/>
         <Spinner
             android:id="@+id/bk_month"
@@ -95,7 +94,7 @@
             android:layout_width="130dp"
             android:gravity="fill_horizontal"
             android:fontFamily="@font/gmarketsans"
-            android:layout_height="60dp"
+            android:layout_height="50dp"
             android:contextClickable="true"/>
         <Spinner
             android:id="@+id/bk_day"
@@ -103,7 +102,7 @@
             android:layout_width="130dp"
             android:gravity="fill_horizontal"
             android:fontFamily="@font/gmarketsans"
-            android:layout_height="60dp"
+            android:layout_height="50dp"
             android:contextClickable="true"/>
     </LinearLayout>
 
@@ -111,8 +110,9 @@
         android:id="@+id/category"
         android:padding="10dp"
         android:layout_margin="10dp"
+        android:layout_marginBottom="0dp"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:fontFamily="@font/gmarketsans"
         android:textAlignment="center"
         android:contextClickable="true" />
@@ -122,9 +122,9 @@
         android:layout_gravity="center_horizontal"
         android:textAlignment="center"
         android:singleLine="true"
-        android:layout_margin="10dp"
+        android:layout_margin="5dp"
         android:layout_width="300dp"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:fontFamily="@font/gmarketsans"
         android:hint="금액" />
     <EditText
@@ -133,8 +133,8 @@
         android:textAlignment="center"
         android:singleLine="true"
         android:layout_width="300dp"
-        android:layout_height="60dp"
-        android:layout_margin="10dp"
+        android:layout_height="50dp"
+        android:layout_margin="5dp"
         android:fontFamily="@font/gmarketsans"
         android:hint="메모" />
 
@@ -146,7 +146,7 @@
             android:id="@+id/writeBtn"
             android:layout_centerInParent="true"
             android:layout_width="120dp"
-            android:layout_height="60dp"
+            android:layout_height="50dp"
             android:background="@drawable/select_button"
             android:gravity="center"
             android:text="가계부 쓰기" />
