[update] 서버에서 해당 연/월/일 가계부 데이터 불러오기
리사이클러뷰로 붙여서 출력하는 거 해야되는데 스레드새끼땜에 안댐

--- a/app/src/main/res/layout/fragment1.xml
+++ b/app/src/main/res/layout/fragment1.xml
@@ -72,5 +72,9 @@
             android:textColor="#e93b01"
             android:textSize="15sp" />
     </LinearLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/detailList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
