--- a/app/src/main/res/layout/detail_item.xml
+++ b/app/src/main/res/layout/detail_item.xml
@@ -19,25 +19,50 @@
         android:orientation="horizontal"
         android:visibility="visible">
         <TextView
-            android:id="@+id/iow"
-            android:layout_width="wrap_content"
+            android:id="@+id/recycle_iow"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:text="지출"
+            android:text="항목"
+            android:textAlignment="center"
             android:textSize="15sp" />
         <TextView
-            android:id="@+id/money"
-            android:layout_width="wrap_content"
+            android:id="@+id/recycle_group"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:text="21000"
+            android:autoSizeTextType="uniform"
+            android:text="그룹"
+            android:textAlignment="center"
             android:textSize="15sp" />
         <TextView
-            android:id="@+id/memo"
-            android:layout_width="wrap_content"
+            android:id="@+id/recycle_category"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:text="교촌치킨 허니콤보"
+            android:autoSizeTextType="uniform"
+            android:text="카테고리"
+            android:textAlignment="center"
+            android:textSize="15sp" />
+        <TextView
+            android:id="@+id/recycle_money"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:autoSizeTextType="uniform"
+            android:text="금액"
+            android:textAlignment="center"
+            android:textSize="15sp" />
+        <TextView
+            android:id="@+id/recycle_memo"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:autoSizeTextType="uniform"
+            android:text="메모"
+            android:textAlignment="center"
             android:textSize="15sp" />
 
+
     </LinearLayout>
+    <!-- 구분선 -->
+
+
 
 
 
