--- a/app/src/main/res/layout/detail_list.xml
+++ b/app/src/main/res/layout/detail_list.xml
@@ -4,54 +4,77 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <Button
-        android:gravity="right"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <ImageButton
+        android:layout_gravity="right"
+        android:layout_margin="10sp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/x"
         android:text="X"
         android:textSize="20sp"
         android:fontFamily="@font/gmarketsans"
-        android:background=""
         android:textColor="#5107b0" />
 
     <LinearLayout
+        android:layout_marginHorizontal="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
         <TextView
             android:id="@+id/detailTv1"
-            android:layout_width="120dp"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:autoSizeTextType="uniform"
             android:text="항목"
-            android:textAlignment="center"
             android:background="#5107b0"
             android:textColor="@color/white"
+            android:textAlignment="center"
             android:textSize="15sp" />
         <TextView
             android:id="@+id/detailTv2"
-            android:layout_width="120dp"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:autoSizeTextType="uniform"
-            android:text="금액"
-            android:textAlignment="center"
+            android:text="그룹"
             android:background="#5107b0"
             android:textColor="@color/white"
+            android:textAlignment="center"
             android:textSize="15sp" />
         <TextView
             android:id="@+id/detailTv3"
-            android:layout_width="170dp"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:autoSizeTextType="uniform"
+            android:text="카테고리"
+            android:background="#5107b0"
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:textSize="15sp" />
+        <TextView
+            android:id="@+id/detailTv4"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:autoSizeTextType="uniform"
+            android:text="금액"
+            android:background="#5107b0"
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:textSize="15sp" />
+        <TextView
+            android:id="@+id/detailTv5"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:autoSizeTextType="uniform"
             android:text="메모"
             android:background="#5107b0"
-            android:textAlignment="center"
             android:textColor="@color/white"
+            android:textAlignment="center"
             android:textSize="15sp" />
 
-        </LinearLayout>
+    </LinearLayout>
+
     <LinearLayout
+        android:layout_marginHorizontal="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
