[update] 가계부 쓰기 (group, memo 오류로 못 읽어옴)

--- a/app/src/main/res/layout/fragment2.xml
+++ b/app/src/main/res/layout/fragment2.xml
@@ -66,7 +66,7 @@
     </RadioGroup>
 
     <Spinner
-        android:id="@+id/iow"
+        android:id="@+id/group"
         android:layout_margin="10dp"
         android:padding="10dp"
         android:fontFamily="@font/gmarketsans"
@@ -128,7 +128,7 @@
         android:fontFamily="@font/gmarketsans"
         android:hint="금액" />
     <EditText
-        android:id="@+id/memo"
+        android:id="@+id/bk_memo"
         android:layout_gravity="center_horizontal"
         android:textAlignment="center"
         android:singleLine="true"
