--- a/app/src/main/res/layout/detail_list.xml
+++ b/app/src/main/res/layout/detail_list.xml
@@ -1,90 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/detailList"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <ImageButton
-        android:layout_gravity="right"
-        android:layout_margin="10sp"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="@drawable/x"
-        android:text="X"
-        android:textSize="20sp"
-        android:fontFamily="@font/gmarketsans"
-        android:textColor="#5107b0" />
-
-    <LinearLayout
-        android:layout_marginHorizontal="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+    android:layout_height="50dp"
+    android:gravity="center_vertical"
+    android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/detailTv1"
+            android:id="@+id/list_iow"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:text="항목"
-            android:background="#5107b0"
-            android:textColor="@color/white"
             android:textAlignment="center"
-            android:textSize="15sp" />
+            android:textSize="13sp" />
         <TextView
-            android:id="@+id/detailTv2"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:autoSizeTextType="uniform"
-            android:text="그룹"
-            android:background="#5107b0"
-            android:textColor="@color/white"
-            android:textAlignment="center"
-            android:textSize="15sp" />
-        <TextView
-            android:id="@+id/detailTv3"
+            android:id="@+id/list_group"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:autoSizeTextType="uniform"
-            android:text="카테고리"
-            android:background="#5107b0"
-            android:textColor="@color/white"
+            android:text="그룹"
             android:textAlignment="center"
-            android:textSize="15sp" />
+            android:textSize="13sp" />
         <TextView
-            android:id="@+id/detailTv4"
-            android:layout_width="100dp"
+            android:id="@+id/list_category"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:autoSizeTextType="uniform"
+            android:text="카테고리"
+            android:textAlignment="center"
+            android:textSize="13sp" />
+        <TextView
+            android:id="@+id/list_money"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:autoSizeTextType="uniform"
             android:text="금액"
-            android:background="#5107b0"
-            android:textColor="@color/white"
             android:textAlignment="center"
-            android:textSize="15sp" />
+            android:textSize="13sp" />
         <TextView
-            android:id="@+id/detailTv5"
+            android:id="@+id/list_memo"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:autoSizeTextType="uniform"
             android:text="메모"
-            android:background="#5107b0"
-            android:textColor="@color/white"
             android:textAlignment="center"
-            android:textSize="15sp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_marginHorizontal="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-
-    </LinearLayout>
-
+            android:textSize="13sp" />
 
 </LinearLayout>
