--- a/app/src/main/res/layout/fragment1.xml
+++ b/app/src/main/res/layout/fragment1.xml
@@ -72,9 +72,68 @@
             android:textColor="#e93b01"
             android:textSize="15sp" />
     </LinearLayout>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/detailList"
+    <LinearLayout
+        android:layout_marginHorizontal="5dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="30dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/detailTv1"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:text="항목"
+            android:background="#5107b0"
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:textSize="15sp" />
+        <TextView
+            android:id="@+id/detailTv2"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:autoSizeTextType="uniform"
+            android:text="그룹"
+            android:background="#5107b0"
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:textSize="15sp" />
+        <TextView
+            android:id="@+id/detailTv3"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:autoSizeTextType="uniform"
+            android:text="카테고리"
+            android:background="#5107b0"
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:textSize="15sp" />
+        <TextView
+            android:id="@+id/detailTv4"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:autoSizeTextType="uniform"
+            android:text="금액"
+            android:background="#5107b0"
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:textSize="15sp" />
+        <TextView
+            android:id="@+id/detailTv5"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:autoSizeTextType="uniform"
+            android:text="메모"
+            android:background="#5107b0"
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:textSize="15sp" />
+
+    </LinearLayout>
+
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="5dp"/>
 
 </LinearLayout>
