--- a/app/src/main/res/layout/detail_item.xml
+++ b/app/src/main/res/layout/detail_item.xml
@@ -20,43 +20,48 @@
         android:visibility="visible">
         <TextView
             android:id="@+id/recycle_iow"
+            android:fontFamily="@font/gmarketsans"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:text="항목"
-            android:textAlignment="center"
-            android:textSize="15sp" />
+            android:gravity="center"
+            android:textSize="12sp" />
         <TextView
             android:id="@+id/recycle_group"
+            android:fontFamily="@font/gmarketsans"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:autoSizeTextType="uniform"
             android:text="그룹"
-            android:textAlignment="center"
-            android:textSize="15sp" />
+            android:gravity="center"
+            android:textSize="12sp" />
         <TextView
             android:id="@+id/recycle_category"
+            android:fontFamily="@font/gmarketsans"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:autoSizeTextType="uniform"
             android:text="카테고리"
-            android:textAlignment="center"
-            android:textSize="15sp" />
+            android:gravity="center"
+            android:textSize="12sp" />
         <TextView
             android:id="@+id/recycle_money"
+            android:fontFamily="@font/gmarketsans"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:autoSizeTextType="uniform"
             android:text="금액"
-            android:textAlignment="center"
-            android:textSize="15sp" />
+            android:gravity="center"
+            android:textSize="12sp" />
         <TextView
             android:id="@+id/recycle_memo"
+            android:fontFamily="@font/gmarketsans"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:autoSizeTextType="uniform"
             android:text="메모"
-            android:textAlignment="center"
-            android:textSize="15sp" />
+            android:gravity="center"
+            android:textSize="12sp" />
 
 
     </LinearLayout>
