--- a/app/src/main/res/layout/fragment1.xml
+++ b/app/src/main/res/layout/fragment1.xml
@@ -49,83 +49,66 @@
         app:mcv_selectionColor="#a362f8"
         app:mcv_showOtherDates="other_months"
         android:showWeekNumber="false" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:orientation="horizontal"
-        android:visibility="visible">
-        <TextView
-            android:layout_width="180dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="20dp"
-            android:fontFamily="@font/gmarketsans"
-            android:text="수입: 0원"
-            android:textColor="#01b3e9"
-            android:textSize="15sp" />
 
-        <TextView
-            android:layout_width="180dp"
-            android:layout_height="40dp"
-            android:layout_marginRight="10dp"
-            android:fontFamily="@font/gmarketsans"
-            android:text="지출: 0원"
-            android:textColor="#e93b01"
-            android:textSize="15sp" />
-    </LinearLayout>
     <LinearLayout
         android:layout_marginHorizontal="5dp"
         android:layout_width="match_parent"
         android:layout_height="30dp"
+        android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/detailTv1"
             android:layout_width="50dp"
-            android:layout_height="wrap_content"
+            android:layout_height="25dp"
             android:text="항목"
+            android:gravity="center"
             android:background="#5107b0"
             android:textColor="@color/white"
-            android:textAlignment="center"
+            android:fontFamily="@font/gmarketsans"
             android:textSize="15sp" />
+
         <TextView
             android:id="@+id/detailTv2"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:autoSizeTextType="uniform"
-            android:text="그룹"
+            android:layout_width="83dp"
+            android:layout_height="25dp"
             android:background="#5107b0"
+            android:fontFamily="@font/gmarketsans"
+            android:text="그룹"
+            android:gravity="center"
             android:textColor="@color/white"
-            android:textAlignment="center"
             android:textSize="15sp" />
+
         <TextView
             android:id="@+id/detailTv3"
             android:layout_width="70dp"
-            android:layout_height="wrap_content"
-            android:autoSizeTextType="uniform"
-            android:text="카테고리"
+            android:layout_height="25dp"
             android:background="#5107b0"
+            android:fontFamily="@font/gmarketsans"
+            android:text="카테고리"
+            android:gravity="center"
             android:textColor="@color/white"
-            android:textAlignment="center"
             android:textSize="15sp" />
+
         <TextView
             android:id="@+id/detailTv4"
             android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:autoSizeTextType="uniform"
+            android:fontFamily="@font/gmarketsans"
+            android:layout_height="25dp"
             android:text="금액"
             android:background="#5107b0"
             android:textColor="@color/white"
-            android:textAlignment="center"
+            android:gravity="center"
             android:textSize="15sp" />
         <TextView
             android:id="@+id/detailTv5"
             android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:autoSizeTextType="uniform"
+            android:layout_height="25dp"
+            android:fontFamily="@font/gmarketsans"
             android:text="메모"
             android:background="#5107b0"
             android:textColor="@color/white"
-            android:textAlignment="center"
+            android:gravity="center"
             android:textSize="15sp" />
 
     </LinearLayout>
