--- a/app/src/main/res/layout/fragment2.xml
+++ b/app/src/main/res/layout/fragment2.xml
@@ -7,6 +7,7 @@
     tools:context=".BookActivity">
 
     <TextView
+        android:layout_marginBottom="20dp"
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="50dp"
